* Rework plugin handling (moving from instance to class)